--- a/.github/workflows/CodeQuality.yml
+++ b/.github/workflows/CodeQuality.yml
@@ -14,6 +14,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install cppcheck
-      run: sudo apt-get y install cppcheck
+      run: sudo apt-get -y install cppcheck
     - name: Cppcheck code
       run: cppcheck 3_Implementation
