--- a/3_Implementation/Makefile
+++ b/3_Implementation/Makefile
@@ -4,8 +4,7 @@ PROJ_NAME = Project
 BUILD_DIR = Build
 
 # All Source code files
-SRC = main.c
-src/A1_SeatDriverInput.c src/A2_input.c src/A3_PWMgen.c
+SRC = main.c\ src/A1_SeatDriverInput.c src/A2_input.c src/A3_PWMgen.c
 
 # All header file paths
 INC =-I inc
