--- a/3_Implementation/Makefile
+++ b/3_Implementation/Makefile
@@ -5,7 +5,9 @@ BUILD_DIR = Build
 
 # All Source code files
 SRC = main.c\
- src/A1_SeatDriverInput.c\ src/A2_input.c\ src/A3_PWMgen.c\
+src/A1_SeatDriverInput.c\
+src/A2_input.c\
+src/A3_PWMgen.c\
 
 # All header file paths
 INC =-I inc
