--- a/3_Implementation/Makefile
+++ b/3_Implementation/Makefile
@@ -4,13 +4,10 @@ PROJ_NAME = Project
 BUILD_DIR = Build
 
 # All Source code files
-SRC = main.c\
-src/A1_SeatDriverInput.c\
-src/A2_input.c\
-src/A3_PWMgen.c\
+SRC = main.c\ src/A1_SeatDriverInput.c\ src/A2_input.c\ src/A3_PWMgen.c\
 
 # All header file paths
-INC =-I inc
+INC = -I inc
 
 # Find out the OS and configure the variables accordingly
 ifdef OS	# All configurations for Windwos OS
